deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rupal01
spec:
  selector:
    matchLabels:
      app: rupal01-pod
  template:
    metadata:
      labels:
        app: rupal01-pod
    spec:
      containers:
      - name: rupal01-container
        image: bcglabacr01.azurecr.io/rupal01:v1

      - name: rupal01-container
        image: bcglabacr01.azurecr.io/rupal01:v1

        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
