service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rupal01-svc
spec:
  selector:
    app: rupal01-pod
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
