ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellocode-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: '*'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/cors-allow-headers: access-token,Authorization,Content-Type,Postman-Token,cache-control
spec:
  rules:
    - http:
        paths:
            - pathType: Prefix
              backend:
                service:
                  name: hellocode-svc
                  port:
                    number: 80
              path: /Rupal
